--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
             <button>Send</button>
         </form>
 
+        <button id="send-location">Send Location</button>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="/js/index.js"></script>
