--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="/js/libs/moment.js"></script>
         <script src="/js/index.js"></script>
     </body>
 </html>
